# Mandelbrot-rs

./: Cargo.toml  Dioxus.toml
src/: mandelbrot.rs
