[package]
name = "parallelmandelbrotdisplay"
version = "0.1.0"
authors = ["GitCat3 <hulkbuster119@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
num-complex = "0.4.6"
rayon = "1.11.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
